--- a/packages/hoppscotch-selfhost-web/package.json
+++ b/packages/hoppscotch-selfhost-web/package.json
@@ -47,6 +47,7 @@
     "util": "0.12.5",
     "verzod": "0.4.0",
     "vue": "3.5.26",
+    "vue-router": "4.6.4",
     "workbox-window": "7.4.0",
     "zod": "3.25.32"
   },
